--- a/design_dance/design_dance.csproj
+++ b/design_dance/design_dance.csproj
@@ -89,17 +89,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="f_mainAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_mainAdmin.Designer.cs">
+      <DependentUpon>f_mainAdmin.cs</DependentUpon>
+    </Compile>
     <Compile Include="f_signin.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="f_signin.Designer.cs">
       <DependentUpon>f_signin.cs</DependentUpon>
     </Compile>
+    <Compile Include="f_signup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_signup.Designer.cs">
+      <DependentUpon>f_signup.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
+    <EmbeddedResource Include="f_mainAdmin.resx">
+      <DependentUpon>f_mainAdmin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="f_signin.resx">
       <DependentUpon>f_signin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_signup.resx">
+      <DependentUpon>f_signup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -142,6 +160,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icon_lpdp1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\bg_login1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
