--- a/design_dance/design_dance.csproj
+++ b/design_dance/design_dance.csproj
@@ -95,6 +95,12 @@
     <Compile Include="f_mainAdmin.Designer.cs">
       <DependentUpon>f_mainAdmin.cs</DependentUpon>
     </Compile>
+    <Compile Include="f_mainUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_mainUser.Designer.cs">
+      <DependentUpon>f_mainUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="f_signin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -112,6 +118,9 @@
     <Compile Include="User.cs" />
     <EmbeddedResource Include="f_mainAdmin.resx">
       <DependentUpon>f_mainAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_mainUser.resx">
+      <DependentUpon>f_mainUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="f_signin.resx">
       <DependentUpon>f_signin.cs</DependentUpon>
