--- a/design_dance/design_dance.csproj
+++ b/design_dance/design_dance.csproj
@@ -121,6 +121,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoundedButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="User.cs" />
     <EmbeddedResource Include="f_mainAdmin.resx">
       <DependentUpon>f_mainAdmin.cs</DependentUpon>
