--- a/design_dance/design_dance.csproj
+++ b/design_dance/design_dance.csproj
@@ -76,6 +76,8 @@
       <HintPath>..\packages\mongocsharpdriver.2.0.0\lib\net45\MongoDB.Driver.Legacy.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.3.0\lib\netstandard1.1\System.Buffers.dll</HintPath>
@@ -86,6 +88,7 @@
       <HintPath>..\packages\System.Runtime.InteropServices.RuntimeInformation.4.0.0\lib\net45\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -95,11 +98,22 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="f_mainAdmin.cs" />
-    <Compile Include="f_mainAdmin.Designer.cs">
+    <Compile Include="admin\main_menu\f_mainAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="admin\main_menu\f_mainAdmin.Designer.cs">
       <DependentUpon>f_mainAdmin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="admin\model_tari\f_Tari.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="admin\model_tari\f_Tari.Designer.cs">
+      <DependentUpon>f_Tari.cs</DependentUpon>
     </Compile>
     <Compile Include="f_mainUser.cs">
       <SubType>Form</SubType>
@@ -131,8 +145,11 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="User.cs" />
-    <EmbeddedResource Include="f_mainAdmin.resx">
+    <EmbeddedResource Include="admin\main_menu\f_mainAdmin.resx">
       <DependentUpon>f_mainAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="admin\model_tari\f_Tari.resx">
+      <DependentUpon>f_Tari.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="f_mainUser.resx">
       <DependentUpon>f_mainUser.cs</DependentUpon>
@@ -194,6 +211,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ic_siger.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WpfControlLibrary1\wpfModelTari.csproj">
+      <Project>{717E1FCA-4F5B-4714-A302-C69F6A120004}</Project>
+      <Name>wpfModelTari</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
