--- a/design_dance/design_dance.csproj
+++ b/design_dance/design_dance.csproj
@@ -103,17 +103,9 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="admin\main_menu\f_mainAdmin.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="admin\main_menu\f_mainAdmin.Designer.cs">
+    <Compile Include="f_mainAdmin.cs" />
+    <Compile Include="f_mainAdmin.Designer.cs">
       <DependentUpon>f_mainAdmin.cs</DependentUpon>
-    </Compile>
-    <Compile Include="admin\model_tari\f_Tari.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="admin\model_tari\f_Tari.Designer.cs">
-      <DependentUpon>f_Tari.cs</DependentUpon>
     </Compile>
     <Compile Include="f_mainUser.cs">
       <SubType>Form</SubType>
@@ -145,11 +137,8 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="User.cs" />
-    <EmbeddedResource Include="admin\main_menu\f_mainAdmin.resx">
+    <EmbeddedResource Include="f_mainAdmin.resx">
       <DependentUpon>f_mainAdmin.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="admin\model_tari\f_Tari.resx">
-      <DependentUpon>f_Tari.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="f_mainUser.resx">
       <DependentUpon>f_mainUser.cs</DependentUpon>
@@ -211,12 +200,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ic_siger.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\WpfControlLibrary1\wpfModelTari.csproj">
-      <Project>{717E1FCA-4F5B-4714-A302-C69F6A120004}</Project>
-      <Name>wpfModelTari</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
